<resources>
    <string name="app_name">ContactList</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="telefono">Telefono</string>
    <string name="nome">Nome</string>
    <string name="account_image">Account image</string>
    <string name="mail">Mail</string>
    <string name="delete">Delete</string>
    <string name="layout">Layout</string>
    <string name="name_layout_preferences">com.example.personale.contactlist.STATELAYOUT</string>
    <string name="state_layout_preferences">com.example.personale.contactlist.SAVEDLAYOUT</string>
</resources>
