<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:padding="8dp"
        android:id="@+id/account_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <RelativeLayout
        android:padding="8dp"
        android:id="@+id/relative_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_image"
        android:gravity="center">


        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/phone_tv"
            android:inputType="text"
            android:lines="1" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/name_et"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/name_et"
            android:layout_toLeftOf="@+id/name_et"
            android:gravity="right|center"
            android:text="@string/nome" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/address_tv"
            android:layout_below="@id/name_tv"
            android:gravity="right|center"
            android:text="@string/telefono" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_et"
            android:layout_toRightOf="@id/phone_tv"
            android:inputType="phone"
            android:maxLength="15" />


        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone_et"
            android:layout_below="@id/phone_et"
            android:layout_toRightOf="@id/name_tv"
            android:inputType="textCapSentences"
            android:lines="1" />

        <TextView
            android:id="@+id/mail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mail_et"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/address_tv"
            android:layout_toLeftOf="@id/address_et"
            android:gravity="right|center"
            android:text="@string/mail" />

        <EditText
            android:id="@+id/mail_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone_et"
            android:layout_below="@id/address_et"
            android:layout_toEndOf="@id/name_tv"
            android:layout_toRightOf="@id/name_tv" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/address_et"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phone_et"
            android:layout_toLeftOf="@+id/phone_et"
            android:gravity="right|center"
            android:text="@string/indirizzo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:background="@android:color/holo_orange_dark"
            android:id="@+id/confirm_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel_action"
            android:background="@android:color/holo_red_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>